feat: functionality for different admin and user roles

--- a/src/main/resources/spring-frontend/signup.html
+++ b/src/main/resources/spring-frontend/signup.html
@@ -97,6 +97,12 @@ p.error-browser
                                    placeholder="Введите password" data-validate="password require"/>
                         </div>
 
+                        <select class="form-control" >
+                            <option >Select your role </option>
+                            <option>user</option>
+                            <option>admin</option>
+                        </select>
+
                         <div class="form-group form-group_center">
                             <button class="btn btn_primary form-btn" type="submit" name="registration" id="registration"
                                     disabled="disabled">Зарегистрироваться
