--- a/src/main/resources/spring-frontend/my.html
+++ b/src/main/resources/spring-frontend/my.html
@@ -178,302 +178,24 @@ p.error-browser
                             class="Section-header-link" href="/myarchive.html">Архив</a>
                     </div>
                 </div>
-                <div class="Cards">
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
+                <div class="Cards Cards_refresh">
+                    <div class="Card" th:each="book : ${recentResults}">
+                        <div class="Card-picture"><a href="#"><img th:src="${book?.getBook()?.image}"
+                                                                   src="/assets/img/content/main/card.jpg"
                                                                    alt="card.jpg"/></a>
                         </div>
                         <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Техника</a>
+                            <strong class="Card-title"><a href="#" th:text="${book?.getBook()?.title}">Техника</a>
                             </strong>
-                            <div class="Card-description">Кондратенко Александр Петрович
+                            <div class="Card-description" th:text="${book?.getBook()?.description}">Кондратенко Александр Петрович
                             </div>
-                            <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                            <div class="Card-sale">30% скидка
-                            </div>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Английский язык. 5 класс. Английский в фокусе.
-                                Рабочая тетрадь. ФГОС</a>
-                            </strong>
-                            <div class="Card-description">Ваулина, Дули, Подоляко
-                            </div>
-                            <div class="Card-cost"><span class="Card-priceOld">₽250.00</span><span class="Card-price">₽210.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Английский язык. 4 класс. Английский в фокусе.
-                                Рабочая тетрадь</a>
-                            </strong>
-                            <div class="Card-description">Быкова, Дули, Эванс
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽190.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                            <div class="Card-sale">30% скидка
-                            </div>
-                            <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
-                            </div>
-                            <a class="Card-status" title="Куплена"><img src="/assets/img/icons/check.svg"
-                                                                        alt="check.svg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Великая Отечественная война. 1941-1945</a>
-                            </strong>
-                            <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽50.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Большое путешествие по телу человека</a>
-                            </strong>
-                            <div class="Card-description">Джон Фарндон
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽900.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a><a class="Card-status"
-                                                                                          title="В корзине"><img
-                                src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Великая Отечественная война. 1941-1945</a>
-                            </strong>
-                            <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽50.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                            <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
-                            </div>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Большое путешествие по телу человека</a>
-                            </strong>
-                            <div class="Card-description">Джон Фарндон
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽900.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Английский язык. 4 класс. Английский в фокусе.
-                                Рабочая тетрадь</a>
-                            </strong>
-                            <div class="Card-description">Быкова, Дули, Эванс
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽190.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Великая Отечественная война. 1941-1945</a>
-                            </strong>
-                            <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽50.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a><a class="Card-status"
-                                                                                          title="Отложена"><img
-                                src="/assets/img/icons/heart.svg" alt="heart.svg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Большое путешествие по телу человека</a>
-                            </strong>
-                            <div class="Card-description">Джон Фарндон
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽900.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Техника</a>
-                            </strong>
-                            <div class="Card-description">Кондратенко Александр Петрович
-                            </div>
-                            <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                            <div class="Card-sale">30% скидка
-                            </div>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Английский язык. 5 класс. Английский в фокусе.
-                                Рабочая тетрадь. ФГОС</a>
-                            </strong>
-                            <div class="Card-description">Ваулина, Дули, Подоляко
-                            </div>
-                            <div class="Card-cost"><span class="Card-priceOld">₽250.00</span><span class="Card-price">₽210.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Английский язык. 4 класс. Английский в фокусе.
-                                Рабочая тетрадь</a>
-                            </strong>
-                            <div class="Card-description">Быкова, Дули, Эванс
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽190.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                            <div class="Card-sale">30% скидка
-                            </div>
-                            <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
-                            </div>
-                            <a class="Card-status" title="Куплена"><img src="/assets/img/icons/check.svg"
-                                                                        alt="check.svg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Великая Отечественная война. 1941-1945</a>
-                            </strong>
-                            <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽50.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Большое путешествие по телу человека</a>
-                            </strong>
-                            <div class="Card-description">Джон Фарндон
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽900.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a><a class="Card-status"
-                                                                                          title="В корзине"><img
-                                src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Великая Отечественная война. 1941-1945</a>
-                            </strong>
-                            <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽50.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                            <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
-                            </div>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Большое путешествие по телу человека</a>
-                            </strong>
-                            <div class="Card-description">Джон Фарндон
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽900.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Английский язык. 4 класс. Английский в фокусе.
-                                Рабочая тетрадь</a>
-                            </strong>
-                            <div class="Card-description">Быкова, Дули, Эванс
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽190.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Великая Отечественная война. 1941-1945</a>
-                            </strong>
-                            <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽50.00</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="Card">
-                        <div class="Card-picture"><a href="#"><img src="/assets/img/content/main/card.jpg"
-                                                                   alt="card.jpg"/></a><a class="Card-status"
-                                                                                          title="Отложена"><img
-                                src="/assets/img/icons/heart.svg" alt="heart.svg"/></a>
-                        </div>
-                        <div class="Card-content">
-                            <strong class="Card-title"><a href="#">Большое путешествие по телу человека</a>
-                            </strong>
-                            <div class="Card-description">Джон Фарндон
-                            </div>
-                            <div class="Card-cost"><span class="Card-price">₽900.00</span>
+                            <div class="Card-cost"><span class="Card-priceOld" th:text="${book?.getBook()?.priceOld}">₽300.00</span><span
+                                class="Card-price" th:text="${book?.getBook()?.price}">₽190.00</span>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </main>
     </div>
