--- a/src/main/resources/spring-frontend/signup.html
+++ b/src/main/resources/spring-frontend/signup.html
@@ -97,10 +97,9 @@ p.error-browser
                                    placeholder="Введите password" data-validate="password require"/>
                         </div>
 
-                        <select class="form-control" >
-                            <option >Select your role </option>
-                            <option>user</option>
-                            <option>admin</option>
+                        <select class="form-control"  th:field="*{role}">
+                            <option th:value="'USER'" th:text="USER"></option>
+                            <option th:value="'USER,ADMIN'" th:text="ADMIN"></option>
                         </select>
 
                         <div class="form-group form-group_center">
