--- a/src/main/resources/spring-frontend/books/news.html
+++ b/src/main/resources/spring-frontend/books/news.html
@@ -77,7 +77,7 @@ p.error-browser
                     </form>
                 </div>
                 <div class="Cards Cards_refresh">
-                    <div class="Card" th:each="book : ${recentResults}">
+                    <div class="Card" th:each="book : ${newsResults}">
                         <div class="Card-picture"><a href="#"><img th:src="${book.image}"
                                                                    src="/assets/img/content/main/card.jpg"
                                                                    alt="card.jpg"/></a>
