--- a/src/main/resources/spring-frontend/books/news.html
+++ b/src/main/resources/spring-frontend/books/news.html
@@ -93,9 +93,8 @@ p.error-browser
                         </div>
                     </div>
                     <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#"
-                                                                     data-refreshshow="recent" data-refreshoffset="20"
-                                                                     data-refreshlimit="20"
-
+                                                                     data-refreshshow="news" data-refreshoffset="5"
+                                                                     data-refreshlimit="5"
                                                                      th:attr="data-refreshquery=${bookPageDto.getBooks()}"
                                                                      >Показать еще</a>
                     </div>
